add inform letter 2

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,20 +56,17 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
+        <h4>Информационное письмо 2</h4>
+        <p><i>14 сентября 2020</i></p>
+        <p>Сообщаем, что открыта регистрация на <b>XХ Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ</b>, которая пройдет <b>с 19 по 21 октября 2020 г. в онлайн-формате</b>.</p>
+        <p style="font-weight: bold; color: #cf2e2e;">Для участия в конференции необходимо до 15 сентября 2020 года пройти регистрацию на сайте.</p>
+        <p><%= link_to "В информационном письме №2", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %> представлена <b>Предварительная программа Конференции.</b></p>
+      </div>
+      <div class="news_record">
         <h4>Конференция будет проходить онлайн</h4>
         <p><i>17 августа 2020</i></p>
         <p>XX юбилейная конференция АНТОК будет проходить в формате онлайн с 19 по 21 октября 2020 г.</p>
       </div>
-      <!-- <div class="news_record">
-        <h4>3-е информационное письмо</h4>
-        <p><i>12 июля 2019</i></p>
-        <p>Ознакомиться можно тут - <%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></p>
-      </div>
-      <div class="news_record">
-        <h4>Регистрация на конференцию</h4>
-        <p><i>23 апреля 2019</i></p>
-        <p>Регистрация на конференцию AKSTS-2019 будет открыта 28 апреля. Регистрация будет производиться на этом сайте.</p>
-      </div> -->
     </div>
   </div>
   <div class="col-md-6">
@@ -80,11 +77,9 @@
         <li>Решение о принятии доклада к публикации в сборнике трудов конференции, а также о форме доклада (выступление или стендовый) будет принято <span style="font-weight: bold;">до 30 сентября 2020 года.</span></li>
       </ul>
       <h3>Информационные письма и программа</h3>
-      <!-- <p>Рабочие языки конференции: русский и английский.</p> -->
       <ul>
-        <li><%= link_to "Информационное письмо (Рус.)", '/docs/2020_inform1_v1.1-1.pdf' %></li>
-        <!--<li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/Inform2_v1.0.pdf', target: "_blank" %></li>
-        <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></li> -->
+        <li><%= link_to "Информационное письмо (Рус.)", '/docs/2020_inform1_v1.1-1.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %></li>
       </ul>
     </div>
     <div class="invite_wrapper_dates">
