--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,11 +56,19 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
+        <h4>Информационное письмо 3</h4>
+        <p><i>17 сентября 2020</i></p>
+        <p>Сообщаем, что срок приема материалов и регистрации на XX Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ продлен <span style="font-weight: bold; color: #cf2e2e;">до 30 сентября</span>.</p>
+        <p>Регистрация на Конференцию <%= link_to "тут", '/users/sign_up' %>.</p>
+        <p>Сообщаем о том, что в настоящее время ведутся переговоры о возможности включения избранных докладов в системы цитирования SCOPUS и Web of Science.</p>
+        <p><%= link_to "В информационном письме №3", '/docs/2020_inform3_v2-1.pdf', target: "_blank" %> представлены обновленная Предварительная программа Конференции и Предварительная программа <b>The Next-Generation Science and Technology Leaders Alumni Networking Forum at CISKC-2020 (YGF/YPF Alumni)</b>.</p>
+      </div>
+      <div class="news_record">
         <h4>Информационное письмо 2</h4>
         <p><i>14 сентября 2020</i></p>
-        <p>Сообщаем, что открыта регистрация на <b>XХ Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ</b>, которая пройдет <b>с 19 по 21 октября 2020 г. в онлайн-формате</b>.</p>
-        <p style="font-weight: bold; color: #cf2e2e;">Для участия в конференции необходимо до 15 сентября 2020 года пройти регистрацию на сайте.</p>
-        <p><%= link_to "В информационном письме №2", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %> представлена <b>Предварительная программа Конференции.</b></p>
+        <p>Сообщаем, что открыта регистрация на XХ Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 19 по 21 октября 2020 г. в онлайн-формате.</p>
+        <p>Для участия в конференции необходимо до 15 сентября 2020 года пройти регистрацию на сайте.</p>
+        <p><%= link_to "В информационном письме №2", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %> представлена Предварительная программа Конференции.</p>
       </div>
       <div class="news_record">
         <h4>Конференция будет проходить онлайн</h4>
@@ -73,13 +81,14 @@
     <div class="invite_wrapper_dates">
       <h3>Важные даты</h3>
       <ul>
-        <li>Для участия в конференции необходимо <span style="font-weight: bold;">до 15 сентября 2020 г.</span> пройти регистрацию на сайте</li>
+        <li>Для участия в конференции необходимо <span style="font-weight: bold;">до 30 сентября 2020 г.</span> пройти регистрацию на сайте</li>
         <li>Решение о принятии доклада к публикации в сборнике трудов конференции, а также о форме доклада (выступление или стендовый) будет принято <span style="font-weight: bold;">до 30 сентября 2020 года.</span></li>
       </ul>
       <h3>Информационные письма и программа</h3>
       <ul>
         <li><%= link_to "Информационное письмо (Рус.)", '/docs/2020_inform1_v1.1-1.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/2020_inform3_v2-1.pdf', target: "_blank" %></li>
       </ul>
     </div>
     <div class="invite_wrapper_dates">
