add program and zoom instructions

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,9 +56,20 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
+        <h4>Программа конференции</h4>
+        <p><i>16 октября 2020</i></p>
+        <p>Опубликована <%= link_to "программа конференции", '/docs/Program.pdf', target: "_blank" %>.
+        <p><span style="font-weight: bold; color: #cf2e2e;"> Напоминаем, что XX Юбилейная Международная конференция по науке и технологиям РОССИЯ-КОРЕЯ-СНГ будет проходить в формате онлайн с 19 по 22 октября 2020 г.</span></p>
+        <p>Приглашаем на Открытие конференции, которое состоится 19 октября в 09:30 на платформе Zoom</p>
+        <p><%= link_to "Информация по подключению в Zoom", '/docs/zoom_connect.png', target: "_blank" %>
+        </p>
+        <p><%= link_to "Памятка по использованию Zoom", '/docs/zoom_instructions_aksts_2020.pdf', target: "_blank" %>
+        </p>
+      </div>
+      <div class="news_record">
         <h4>Информационное письмо 3</h4>
         <p><i>17 сентября 2020</i></p>
-        <p>Сообщаем, что срок приема материалов и регистрации на XX Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ продлен <span style="font-weight: bold; color: #cf2e2e;">до 30 сентября</span>.</p>
+        <p>Сообщаем, что срок приема материалов и регистрации на XX Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ продлен <span style="font-weight: bold;">до 30 сентября</span>.</p>
         <p>Регистрация на Конференцию <%= link_to "тут", '/users/sign_up' %>.</p>
         <p>Сообщаем о том, что в настоящее время ведутся переговоры о возможности включения избранных докладов в системы цитирования SCOPUS и Web of Science.</p>
         <p><%= link_to "В информационном письме №3", '/docs/2020_inform3_v2-1.pdf', target: "_blank" %> представлены обновленная Предварительная программа Конференции и Предварительная программа <b>The Next-Generation Science and Technology Leaders Alumni Networking Forum at CISKC-2020 (YGF/YPF Alumni)</b>.</p>
@@ -86,6 +97,7 @@
       </ul>
       <h3>Информационные письма и программа</h3>
       <ul>
+        <li><%= link_to "Программа конференции", '/docs/Program.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо (Рус.)", '/docs/2020_inform1_v1.1-1.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/2020_inform3_v2-1.pdf', target: "_blank" %></li>
