--- a/app/views/certificates/show.html.erb
+++ b/app/views/certificates/show.html.erb
@@ -3,8 +3,5 @@
   <div class="cert">
     <%= @applic.fio %>
   </div>
-  <div class="sign">
-    <%= image_tag "edis_sign2.png" %>
-  </div>
-  <%= image_tag "sert2019ru.jpeg" %>
+  <%= image_tag "sert2020ru.jpg", style: 'width:827px;' %>
 </div>
