--- a/app/views/certificates/edit.html.erb
+++ b/app/views/certificates/edit.html.erb
@@ -3,8 +3,5 @@
   <div class="cert">
     <%= @applic.fio_eng %>
   </div>
-  <div class="sign">
-    <%= image_tag "edis_sign2.png" %>
-  </div>
-  <%= image_tag "sert2019en.jpeg" %>
+  <%= image_tag "sert2020en.jpg", style: 'width:827px;' %>
 </div>
