--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     <div style="margin-top: 30px;">
       <p><b>Организаторы конференции</b> – Научно-техническое общество «АНТОК» (Россия), Korean Federation of Science and Technology Societies (Республика Корея),</p>
       <p><b>Соорганизаторы конференции</b> – Общероссийское объединение корейцев, Научно-технические общества «ТИНБО» (Узбекистан) и «КАХАК» (Казахстан), Корейско-Российский центр сотрудничества по науке и технологиям KORUSTEC, Молодежное движение корейцев Москвы</p>
-      <p>приглашают Вас принять участие в <b>XX ЮБИЛЕЙНОЙ МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ</b>, которая будет проходить в формате онлайн <span style="font-weight: bold;">с 19 по 21 октября 2020 г.</span> под девизом «Think! Imagine! Create!».</p>
+      <p>приглашают Вас принять участие в <b>XХI МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ</b>, которая будет проходить в Москве <span style="font-weight: bold;">с 26 по 28 августа 2021 г.</span> под девизом «Thirty years of Networking in Science!».</p>
     </div>
   </div>
 </div>
@@ -56,35 +56,9 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
-        <h4>Программа конференции</h4>
-        <p><i>16 октября 2020</i></p>
-        <p>Опубликована <%= link_to "программа конференции", '/docs/Program.pdf', target: "_blank" %>.
-        <p><span style="font-weight: bold; color: #cf2e2e;"> Напоминаем, что XX Юбилейная Международная конференция по науке и технологиям РОССИЯ-КОРЕЯ-СНГ будет проходить в формате онлайн с 19 по 22 октября 2020 г.</span></p>
-        <p>Приглашаем на Открытие конференции, которое состоится 19 октября в 09:30 на платформе Zoom</p>
-        <p><%= link_to "Информация по подключению в Zoom", '/docs/zoom_connect.png', target: "_blank" %>
-        </p>
-        <p><%= link_to "Памятка по использованию Zoom", '/docs/zoom_instructions_aksts_2020.pdf', target: "_blank" %>
-        </p>
-      </div>
-      <div class="news_record">
-        <h4>Информационное письмо 3</h4>
-        <p><i>17 сентября 2020</i></p>
-        <p>Сообщаем, что срок приема материалов и регистрации на XX Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ продлен <span style="font-weight: bold;">до 30 сентября</span>.</p>
-        <p>Регистрация на Конференцию <%= link_to "тут", '/users/sign_up' %>.</p>
-        <p>Сообщаем о том, что в настоящее время ведутся переговоры о возможности включения избранных докладов в системы цитирования SCOPUS и Web of Science.</p>
-        <p><%= link_to "В информационном письме №3", '/docs/2020_inform3_v2-1.pdf', target: "_blank" %> представлены обновленная Предварительная программа Конференции и Предварительная программа <b>The Next-Generation Science and Technology Leaders Alumni Networking Forum at CISKC-2020 (YGF/YPF Alumni)</b>.</p>
-      </div>
-      <div class="news_record">
-        <h4>Информационное письмо 2</h4>
-        <p><i>14 сентября 2020</i></p>
-        <p>Сообщаем, что открыта регистрация на XХ Юбилейную Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 19 по 21 октября 2020 г. в онлайн-формате.</p>
-        <p>Для участия в конференции необходимо до 15 сентября 2020 года пройти регистрацию на сайте.</p>
-        <p><%= link_to "В информационном письме №2", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %> представлена Предварительная программа Конференции.</p>
-      </div>
-      <div class="news_record">
-        <h4>Конференция будет проходить онлайн</h4>
-        <p><i>17 августа 2020</i></p>
-        <p>XX юбилейная конференция АНТОК будет проходить в формате онлайн с 19 по 21 октября 2020 г.</p>
+        <h4>Информационное письмо</h4>
+        <p><i>24 мая 2021</i></p>
+        <p>Сообщаем, что открыта регистрация на XХI Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 26 по 28 августа 2021 г. в Москве.</p>
       </div>
     </div>
   </div>
@@ -92,20 +66,16 @@
     <div class="invite_wrapper_dates">
       <h3>Важные даты</h3>
       <ul>
-        <li>Для участия в конференции необходимо <span style="font-weight: bold;">до 30 сентября 2020 г.</span> пройти регистрацию на сайте</li>
-        <li>Решение о принятии доклада к публикации в сборнике трудов конференции, а также о форме доклада (выступление или стендовый) будет принято <span style="font-weight: bold;">до 30 сентября 2020 года.</span></li>
+        <li>Для участия в конференции необходимо пройти регистрацию на сайте</li>
       </ul>
       <h3>Информационные письма и программа</h3>
       <ul>
-        <li><%= link_to "Программа конференции", '/docs/Program.pdf', target: "_blank" %></li>
-        <li><%= link_to "Информационное письмо (Рус.)", '/docs/2020_inform1_v1.1-1.pdf', target: "_blank" %></li>
-        <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/2020_inform2_v1.2.pdf', target: "_blank" %></li>
-        <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/2020_inform3_v2-1.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо (Рус.)", '/docs/2021_inform1_v1.1.pdf', target: "_blank" %></li>
       </ul>
     </div>
     <div class="invite_wrapper_dates">
       <h3>Контакты оргкомитета</h3>
-      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2020».</p>
+      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2021».</p>
       <p>Email: <a href="mailto:AKSTSRussia@gmail.com">AKSTSRussia@gmail.com</a></p>
       <div class="respect">
         С уважением,<br/>
