--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -53,7 +53,7 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
-        <h4>Информационное письмо</h4>
+        <h4>Информационное письмо №1</h4>
         <p><i>24 мая 2021</i></p>
         <p>Сообщаем, что открыта регистрация на XХI Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 26 по 28 августа 2021 г. в Москве.</p>
       </div>
@@ -63,11 +63,11 @@
     <div class="invite_wrapper_dates">
       <h3>Важные даты</h3>
       <ul>
-        <li>Для участия в конференции необходимо пройти регистрацию на сайте</li>
+        <li>Для участия в конференции необходимо пройти регистрацию на сайте до <span style="color: #990000">31 июля 2021 г.</span></li>
       </ul>
       <h3>Информационные письма и программа</h3>
       <ul>
-        <li><%= link_to "Информационное письмо (Рус.)", '/docs/2021_inform1_v1.1.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо №1 (Рус.)", '/docs/2021_inform1_v1.1.pdf', target: "_blank" %></li>
       </ul>
     </div>
     <div class="invite_wrapper_dates">
