bold style for inform letter 1

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -63,7 +63,7 @@
     <div class="invite_wrapper_dates">
       <h3>Важные даты</h3>
       <ul>
-        <li>Для участия в конференции необходимо пройти регистрацию на сайте до <span style="color: #990000">31 июля 2021 г.</span></li>
+        <li>Для участия в конференции необходимо пройти регистрацию на сайте до <span style="color: #990000; font-weight: bold; white-space: nowrap;">31 июля 2021 г.</span></li>
       </ul>
       <h3>Информационные письма и программа</h3>
       <ul>
