--- a/app/views/applics/_form_fields.html.erb
+++ b/app/views/applics/_form_fields.html.erb
@@ -4,6 +4,7 @@
 <%= f.input :need_hotel, collection: Applic.need_hotel_collection, selected: @applic.need_hotel, :input_html => { :class => 'form-control' }, label_method: :first, value_method: :last %>
 <h3><%= t(:personal_info) %></h3>
 <%= f.input :fio, :input_html => { :class => 'form-control' } %>
+<%= f.input :fio_eng, :input_html => { :class => 'form-control' } %>
 <%= f.input :birth_year, :input_html => { :class => 'form-control' } %>
 <%= f.input :email, :input_html => { :class => 'form-control' } %>
 <%= f.input :phones, :input_html => { :class => 'form-control' }, hint: "10 знаков, пример ввода 9161234567 / 4951234567" %>
