--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     <div style="margin-top: 30px;">
       <p><b>Организаторы конференции</b> – Научно-техническое общество «АНТОК» (Россия), Korean Federation of Science and Technology Societies (Республика Корея),</p>
       <p><b>Соорганизаторы конференции</b> – Общероссийское объединение корейцев, Научно-технические общества «ТИНБО» (Узбекистан) и «КАХАК» (Казахстан), Корейско-Российский центр сотрудничества по науке и технологиям KORUSTEC, Молодежное движение корейцев Москвы</p>
-      <p>приглашают Вас принять участие в <b>XХI МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ</b>, которая будет проходить в Москве <span style="font-weight: bold;">с 26 по 28 августа 2021 г.</span> под девизом «Thirty years of Networking in Science!».</p>
+      <p>приглашают Вас принять участие в <b>XХI МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ</b>, которая будет проходить в Москве в гостинице Холидей Инн Сущевский <span style="font-weight: bold;">с 26 по 28 августа 2021 г.</span> под девизом «Thirty years of Networking in Science!».</p>
     </div>
   </div>
 </div>
