--- a/app/views/static_pages/hotel.html.erb
+++ b/app/views/static_pages/hotel.html.erb
@@ -1,42 +1,42 @@
 <h2 id="title_about_conf">Как добраться</h2>
 <div class="row frontpage">
   <div class="col-md-6">
-    <p id ="info_about_aksts">Современный отель «Holiday Inn Виноградово» находится на берегу озера, менее чем в 20 км от аэропорта Шереметьево. К услугам гостей крытый бассейн и фитнес-центр с небольшим тренажерным залом и 2 саунами.</p>
-    <p>В номерах отеля «Holiday Inn Виноградово» установлен письменный стол и обустроен гостиный уголок. В числе удобств телевизор со спутниковыми каналами и бесплатный Wi-Fi.</p>
-    <p>Отель «Holiday Inn Виноградово» находится в 15 км от выставочного центра «Крокус Экспо». Автомобиль можно бесплатно оставить на частной парковке.</p>
+    <p id ="info_about_aksts">Гостиница Холидей Инн Москва Сущевский, находится в нескольких шагах от Проспекта Мира, одной из главных улиц Москвы.</p>
+    <p>Отель расположен всего лишь в 5 км от Красной площади, культурного и исторического центра города с его галереями, лучшими концертными залами и театрами страны. 10 минут на машине или 4 остановки на метро без пересадок от отеля Холидей Инн Москва Сущевский и Вы окажетесь около ВДНХ или Кремля.</p>
+    <p><b style="color: red;">Внимание!</b> C 22 августа 2020 «Рижская» закрыта на ремонт на 12 месяцев.</p>
+    <p>Добраться до отеля можно бесплатным компенсационным маршрутом КМ «Метро «Проспект Мира» - Метро «Рижская», работающим ежедневно с 05.30 утра до 02:00 ночи. <a href="https://www.mosmetro.ru/press/news/3716/?type=m" target="_blank">Подробнее о компенсационных маршрутах до Метро «Рижская»</a></p>
     <br>
-    <p><b>Адрес:</b> г. Москва, Дмитровское шоссе, владение 171</p>
-    <p><b>Телефон:</b> +7 (495) 937-06-70</p><br>
-    <p><b>E-mail:</b> reservations.mowvg@ihg.com</p>
-    <p><b>Сайт: </b><a href="http://himv.ru/">Холидей Инн Виноградово</a></p>
+    <p><b>Адрес:</b> г. Москва, ул. Сущевский Вал, д. 74</p>
+    <p><b>Телефон:</b> +7-(495)-225-82-82</p><br>
+    <p><b>E-mail:</b> reservations@hi-mole.ru</p>
+    <p><b>Сайт: </b><a href="https://moscow-hi.ru/suschevsky/" target="_blank">Холидей Инн Сущевский</a></p>
   </div>
   <div class="col-md-6">
-    <%= image_tag "hotel2019/11.jpg", class: "img-responsive", alt: "Холидей Инн Виноградово" %>
-    <h5 id="image_title">Холидей Инн Виноградово</h5>
+    <%= image_tag "hotel2020/hotel.jpeg", class: "img-responsive", alt: "Холидей Инн Сущевский" %>
+    <h5 id="image_title">Холидей Инн Сущевский</h5>
   </div>   
 </div>
 <div class="row">
   <div class="col-md-6">
-    <h4>От метро Алтуфьево</h4>
-    <p><b>Яндекс такси от м. Алтуфьево до гостиницы стоит 300-400р в зависимости от загруженности дорог.</b></p>
-    <p>От станции московского метрополитена «Алтуфьево» Серпуховско-Тимирязевской линии посетители доедут до гостиницы «Holiday Inn Moscow Vinogradovo» на автобусах №519, №685 или маршрутных такси №572, №685м, следуя до остановки «Виноградово» (далее пешком около 500 метров).</p>
+    <h4>Из аэропорта Шереметьево</h4>
+    <p><b>На аэроэкспрессе:</b> Приехав на Белорусский вокзал, войдите в метро, перейдите на станцию Белорусская кольцевая, проследуйте 2 станции до станции "Проспекта Мира". Выйдите из метро и воспользуйтесь бесплатным автобусом КМ "Проспект Мира - Рижская". Проехав 1 остановку, выйдите у метро "Рижская" и перейдите по подземному переходу ко входу в гостиницу.</p>
+    <p><b>На автобусе:</b> Воспользуйтесь автобусами и маршрутными такси от аэропорта до метро "Речной вокзал" (авт. 851, м.т. 949) или "Планерная" (авт. 817, м.т. 948). Отправление автобусов каждые 15 минут, с 05:30 до 00:00. Далее следуйте схеме пересадок в метро от станции Вашей посадки до станции "Проспект Мира". Выйдите из метро и воспользуйтесь бесплатным автобусом КМ "Проспект Мира - Рижская". Проехав 1 остановку, выйдите у метро "Рижская" и перейдите по подземному переходу к гостинице.</p>
     <br/>
-    <h4>На машине, такси</h4>
-    <p>Для того чтобы добраться сюда на личном транспорте от МКАД, необходимо, проехав около 2,5 км по Дмитровскому шоссе (съезд на 82-м км), осуществить левый поворот (на Долгопрудную аллею), затем, проехав по ней около 200 метров, свернуть в проулок и двигаться еще 300 метров до здания отеля (дорога от МКАД займет не более 6 минут).</p>
+    <h4>Из аэропорта Домодедово</h4>
+    <p><b>На аэроэкспрессе:</b> Отправление из аэропорта каждые полчаса с 06:00 до 00:30. Из аэропорта доехать до Павелецкого вокзала, проехать на метро от «Павелецкая» радиальная до «Новокузнецкой», перейти на «Третьяковскую» и проследовать до станции «Проспект Мира» и далее на бесплатном автобусе КМ "Метро "Рижская" - Метро "Проспект Мира" до станции метро "Рижская" (1 остановка). Далее по подземному переходу к отелю. График работы бесплатного автобуса: с 5 утра до 2 часов ночи.</p>
+    <p><b>На автобусе:</b> На автобусе (308) или маршрутном такси (308) до метро «Домодедовская». Автобусы отправляются каждые 15 минут с 06:00 до 00:00. Затем на метро до станции «Проспект Мира», далее на бесплатном автобусе КМ "Метро "Рижская" - Метро "Проспект Мира" до станции метро "Рижская" (1 остановка). Далее по подземному переходу к отелю. График работы бесплатного автобуса: с 5 утра до 2 часов ночи.</p>
     <br/>
-    <h4>Из аэропорта Шереметьево-2</h4>
-    <p>По Международному шоссе двигайтесь на запад, поверните на Ленинградское шоссе. Съезд с Ленинградского шоссе на МКАД в направлении движения на восток. После проезда по МКАД съезд на Дмитровское шоссе в направлении области. Через 4 км развернитесь под третьей эстакадой, потом поверните направо после наземного пешеходного перехода. Двигайтесь вдоль зеленого забора до шлагбаума.</p>
+    <h4>Из аэропорта Внуково</h4>
+    <p><b>На аэроэкспрессе:</b> На аэроэкспрессе до станции метро Киевская, затем на метро до станции "Проспект Мира" и на бесплатном автобусе КМ "Метро "Рижская" - Метро "Проспект Мира" до станции метро "Рижская" (1 остановка), далее по подземному переходу к отелю. График работы бесплатного автобуса: с 5 утра до 2 часов ночи.</p>
+    <p><b>На автобусе:</b> На автобусе (№ 611, 611 с) до станции метро Юго-Западная. Отправление автобусов каждые 15 минут с 05:00 до 01:00. Доехать до станции "Чистые пруды", перейти на "Тургеневскую", продолжить движение до станции "Проспект Мира" и далее на бесплатном автобусе КМ "Метро "Рижская" - Метро "Проспект Мира" доехать до станции метро "Рижская" (1 остановка), далее по подземному переходу к отелю. График работы бесплатного автобуса: с 5 утра до 2 часов ночи.</p>
+    <br/>
   </div>
   <div class="col-md-6">
-   <%= image_tag "hotel2019/ekaterina.jpeg", class: "img-responsive", alt: "Зал Екатерина" %>  
-   <h5 id="image_title">Зал Екатерина</h5>
-   <%= image_tag "hotel2019/nikolaevsky.jpeg", class: "img-responsive", alt: "Зал Николаевский" %>  
-   <h5 id="image_title">Зал Николаевский</h5>
   </div>
 </div>
 
 <div class="row frontpage">
   <div class="col-md-12">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2234.3287138203104!2d37.53415705154151!3d55.9436743805096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a5abb7193b1%3A0x29057da6cd9f6480!2z0KXQvtC70LjQtNC10Lkg0JjQvdC9INCS0LjQvdC-0LPRgNCw0LTQvtCy0L4!5e0!3m2!1sru!2sru!4v1562536254052!5m2!1sru!2sru" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2243.061385646635!2d37.62661425143739!3d55.79217198046849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b535f5ce326d27%3A0x9daad4e95fae0d51!2z0YPQuy4g0KHRg9GJ0ZHQstGB0LrQuNC5INCS0LDQuywgNzQsINCc0L7RgdC60LLQsCwg0KDQvtGB0YHQuNGPLCAxMjkyNzI!5e0!3m2!1sru!2s!4v1627295695367!5m2!1sru!2s" width="100%" height="450" frameborder="0" style="border:0"></iframe>
   </div>
 </div>
