add conference program

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -56,6 +56,11 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
+        <h4>Программа конференции</h4>
+        <p><i>21 августа 2021</i></p>
+        <p>Опубликована программа конференции <%= link_to "Программа конференции", '/docs/program_aksts_2021.pdf', target: "_blank" %></p>
+      </div>
+      <div class="news_record">
         <h4>Информационное письмо №1</h4>
         <p><i>24 мая 2021</i></p>
         <p>Сообщаем, что открыта регистрация на XХI Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 26 по 28 августа 2021 г. в Москве.</p>
@@ -70,6 +75,7 @@
       </ul>
       <h3>Информационные письма и программа</h3>
       <ul>
+        <li><%= link_to "Программа конференции (program)", '/docs/program_aksts_2021.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо №1 (Рус.)", '/docs/2021_inform1_v1.2.pdf', target: "_blank" %></li>
       </ul>
     </div>
