--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -87,13 +87,9 @@
       <footer class="footer">
         <hr/>
         <div class="row">
-          <div class="col-md-4 col-md-offset-2">&copy; <a href="http://www.aksts.ru">www.aksts.ru</a> 2012 - 2021</div>
+          <div class="col-md-4 col-md-offset-2">&copy; <a href="https://aksts.ru">aksts.ru</a> 2012 - 2022</div>
           <div class="col-md-4">
-            <% if params[:locale]=='en' %>
-              Site made by <a href="http://www.busation.com">Michael Klishevich</a>
-            <% else %>
-              Created with love by <a href="https://www.facebook.com/klishevich">Michael Klishevich</a>
-            <% end %>
+            Created with love by <a href="https://www.facebook.com/klishevich">Michael Klishevich</a>
           </div>
         </div>
       </footer>       
