--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -9,7 +9,7 @@
     <div style="margin-top: 30px;">
       <p><b>Организаторы конференции</b> – Научно-техническое общество «АНТОК» (Россия), Korean Federation of Science and Technology Societies (Республика Корея),</p>
       <p><b>Соорганизаторы конференции</b> – Общероссийское объединение корейцев, Научно-технические общества «ТИНБО» (Узбекистан) и «КАХАК» (Казахстан), Корейско-Российский центр сотрудничества по науке и технологиям KORUSTEC, Молодежное движение корейцев Москвы</p>
-      <p>приглашают Вас принять участие в <b>XХI МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ</b>, которая будет проходить в Москве в гостинице Холидей Инн Сущевский <span style="font-weight: bold;">с 26 по 28 августа 2021 г.</span> под девизом «Thirty years of Networking in Science!».</p>
+      <p>приглашают Вас принять участие в <b>XХII МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ</b>, которая будет проходить в Москве <span style="font-weight: bold;">с 25 по 27 августа 2022 г.</span> под девизом «Enjoy the science — create the future!».</p>
     </div>
   </div>
 </div>
@@ -42,9 +42,6 @@
           <!-- <h4><%= t :home_conf_description %></h4> -->
           <div class="buttons">
             <br/>
-            <p><%= link_to t(:sign_up), (new_user_registration_path + '#new_registration'), class: "btn btn-primary btn-lg" %></p>
-            <p><%= t(:or) %></p>
-            <p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-default btn-lg"%></p>
           </div>
         </div>
       <% end %>
@@ -56,14 +53,9 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
-        <h4>Программа конференции</h4>
-        <p><i>21 августа 2021</i></p>
-        <p>Опубликована программа конференции <%= link_to "Программа конференции", '/docs/program_aksts_2021.pdf', target: "_blank" %></p>
-      </div>
-      <div class="news_record">
         <h4>Информационное письмо №1</h4>
-        <p><i>24 мая 2021</i></p>
-        <p>Сообщаем, что открыта регистрация на XХI Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 26 по 28 августа 2021 г. в Москве.</p>
+        <p><i>23 мая 2021</i></p>
+        <p>Сообщаем, что открыта регистрация на XХII Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 25 по 27 августа 2022 г. в Москве.</p>
       </div>
     </div>
   </div>
@@ -71,17 +63,16 @@
     <div class="invite_wrapper_dates">
       <h3>Важные даты</h3>
       <ul>
-        <li>Для участия в конференции необходимо пройти регистрацию на сайте до <span style="color: #990000; font-weight: bold; white-space: nowrap;">31 июля 2021 г.</span></li>
+        <li>Для участия в конференции необходимо пройти регистрацию на сайте до <span style="color: #990000; font-weight: bold; white-space: nowrap;">20 июля 2022 г.</span></li>
       </ul>
       <h3>Информационные письма и программа</h3>
       <ul>
-        <li><%= link_to "Программа конференции (program)", '/docs/program_aksts_2021.pdf', target: "_blank" %></li>
-        <li><%= link_to "Информационное письмо №1 (Рус.)", '/docs/2021_inform1_v1.2.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо №1 (Рус.)", '/docs/2022_inform1_v1.1-1.pdf', target: "_blank" %></li>
       </ul>
     </div>
     <div class="invite_wrapper_dates">
       <h3>Контакты оргкомитета</h3>
-      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2021».</p>
+      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2022».</p>
       <p>Email: <a href="mailto:AKSTSRussia@gmail.com">AKSTSRussia@gmail.com</a></p>
       <div class="respect">
         С уважением,<br/>
