--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">AKSTS-2021 Moscow</a>
+      <a class="navbar-brand" href="/">AKSTS-2022 Moscow</a>
 <!--       <%= link_to image_tag("ru.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=ru", title: "Переключиться на Русский" %>
       <%= link_to image_tag("en.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=en", title: "Switch to English" %> -->
     </div>
@@ -20,8 +20,8 @@
         <li><%= link_to t(:home_link_message), message_path %></li>
         <li><%= link_to t(:home_link_about), about_path %></li>
         <li><%= link_to t(:home_link_history), history_path %></li>
-        <li><%= link_to t(:home_link_certificates), certificates_path %></li> -->
-        <li><%= link_to t(:home_link_hotel), hotel_path %></li>
+        <li><%= link_to t(:home_link_certificates), certificates_path %></li>
+        <li><%= link_to t(:home_link_hotel), hotel_path %></li>-->
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
