--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1 class="home_conf_title"><%= t :home_conf_antok %></h1>
 <h2 class="home_conf_subtitle"><%= t :home_conf_moto %></h2>
 <div class="home_img">
-  <%= image_tag "home_img_2020.jpg", class: "img-responsive" %>
+  <%= image_tag "home_img_2022.jpg", class: "img-responsive" %>
 </div>
 <div class="frontpage">
   <div class="invite_wrapper">
@@ -42,6 +42,9 @@
           <!-- <h4><%= t :home_conf_description %></h4> -->
           <div class="buttons">
             <br/>
+            <p><%= link_to t(:sign_up), (new_user_registration_path + '#new_registration'), class: "btn btn-primary btn-lg" %></p>
+            <p><%= t(:or) %></p>
+            <p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-default btn-lg"%></p>
           </div>
         </div>
       <% end %>
@@ -54,7 +57,7 @@
       <h3>НОВОСТИ</h3>
       <div class="news_record">
         <h4>Информационное письмо №1</h4>
-        <p><i>23 мая 2021</i></p>
+        <p><i>23 мая 2022</i></p>
         <p>Сообщаем, что открыта регистрация на XХII Международную конференцию по науке и технологиям РОССИЯ-КОРЕЯ-СНГ, которая пройдет с 25 по 27 августа 2022 г. в Москве.</p>
       </div>
     </div>
