enable email deliveries

--- a/app/views/applics/index.xls.erb
+++ b/app/views/applics/index.xls.erb
@@ -13,7 +13,7 @@
         <Cell><Data ss:Type="String">Член АНТОК</Data></Cell>
         <Cell><Data ss:Type="String">ID АНТОК</Data></Cell>
         <Cell><Data ss:Type="String">ФИО</Data></Cell>
-        <Cell><Data ss:Type="String">Фамилия и имя по-английски</Data></Cell>
+        <Cell><Data ss:Type="String">Фамилия и имя на английском</Data></Cell>
         <Cell><Data ss:Type="String">Год рождения</Data></Cell>
         <Cell><Data ss:Type="String">Email</Data></Cell>
         <Cell><Data ss:Type="String">Мобильный телефон</Data></Cell>
